--- a/Notebook.ipynb
+++ b/Notebook.ipynb
@@ -22,15 +22,34 @@
     "\n",
     "White bloods cells can be classified as one of the following:  \n",
     "\n",
-    "|  Basophil  |  Eosinophil  |  Neutrophil  |    Lymphocyte    |    Monocyte    |\n",
-    "|------------|--------------|--------------|------------------|----------------|\n",
-    "\n",
-    "\n",
     "<table>\n",
     "  <tr>\n",
-    "    <th>Company</th>\n",
-    "    <th>Contact</th>\n",
-    "    <th>Country</th>\n",
+    "    <th>Family:</th>\n",
+    "    <th colspan=\"3\">Granulocyte</th>\n",
+    "    <th rowspan=\"2\">Lymphocyte</th>\n",
+    "    <th rowspan=\"2\">Monocyte</th>\n",
+    "  </tr>\n",
+    "  <tr>\n",
+    "    <th>Type:</th> \n",
+    "    <th>Basophil</th>\n",
+    "    <th>Eosinophil</th>\n",
+    "    <th>Neutrophil</th>\n",
+    "  </tr>\n",
+    "  <tr>\n",
+    "    <td></td>\n",
+    "    <td><img src=\"Presentation/images/besophil.jpg\" width=200px></td>\n",
+    "    <td><img src=\"Presentation/images/eosinophil.jpg\" width=200px></td>\n",
+    "    <td><img src=\"Presentation/images/neutrophil.jpg\" width=200px></td>\n",
+    "    <td><img src=\"Presentation/images/lymphocyte.jpg\" width=200px></td>\n",
+    "    <td><img src=\"Presentation/images/monocyte.jpg\" width=200px></td>\n",
+    "  </tr>\n",
+    "  <tr>\n",
+    "    <td></td>\n",
+    "    <td>Nucleus divided into 2-5 segments.</td>\n",
+    "    <td>Nucleus divided into 2 segments.</td>\n",
+    "    <td>Nucleus divided into 2-5 segments.</td>\n",
+    "    <td>Nucleus large, round or oval.</td>\n",
+    "    <td>Nucleus single segment, <p>shaped as kidney bean.</td>\n",
     "  </tr>\n",
     "</table>\n"
    ]
