--- a/Notebook.ipynb
+++ b/Notebook.ipynb
@@ -76,20 +76,17 @@
    "source": [
     "### Results\n",
     "\n",
-    "<table>\n",
-    " <tr>\n",
-    "   <th>Manual Feature Extraction + Decision Tree</th>\n",
-    "   <th>Pretrained Convolution Layer + Neural Net</th>\n",
-    " </tr>\n",
-    " <tr>\n",
-    "   <td></td>\n",
-    "   <td><img src=\"Presentation/images/classification_report_cnn.png\"></td>\n",
-    " </tr>\n",
-    " <tr>\n",
-    "   <td></td>\n",
-    "   <td><img src=\"Presentation/images/confusion_matrix_CNN.png\" width = 600px></td>\n",
-    " </tr>\n",
-    "</table>"
+    "The neural net offers a mixed improvement over the manual feature extraction.  Both have roughly the same F1 scores, but the neural net is successfully able to classify images by more specific type.  The classification has more meaning as a result.  \n",
+    "\n",
+    "When using **manual feature extraction** with a **decision tree**, the overall **F1 score** was **87%**.  The two smaller classes, lymphocytes and monocytes had an F1 average of 48%.\n",
+    "\n",
+    "When using the **pretrained convolutional layer** with a **neural net**, the overall **F1 score** is **78%**.  The two smaller classes, lymphocytes and monocytes have an F1 average of 60%.\n",
+    "\n",
+    "#### **Classification Report**: Pretrained Convolution Layer + Neural Net  \n",
+    "<img src=\"Presentation/images/classification_report_cnn.png\">  \n",
+    "\n",
+    "#### **Confusion Matrix**: Pretrained Convolution Layer + Neural Net   \n",
+    "<img src=\"Presentation/images/confusion_matrix_CNN.png\" width = 600px>"
    ]
   },
   {
@@ -279,7 +276,15 @@
      "text": [
       "255/255 [==============================] - 198s 774ms/step - loss: 0.9442 - accuracy: 0.6737 - val_loss: 0.8458 - val_accuracy: 0.7132\n",
       "Epoch 2/10\n",
-      " 32/255 [==>...........................] - ETA: 2:33 - loss: 0.7906 - accuracy: 0.7383"
+      "255/255 [==============================] - 226s 887ms/step - loss: 0.7134 - accuracy: 0.7638 - val_loss: 0.7729 - val_accuracy: 0.7516\n",
+      "Epoch 3/10\n",
+      "255/255 [==============================] - 235s 920ms/step - loss: 0.5973 - accuracy: 0.7985 - val_loss: 0.7285 - val_accuracy: 0.7639\n",
+      "Epoch 4/10\n",
+      "255/255 [==============================] - 233s 913ms/step - loss: 0.5395 - accuracy: 0.8128 - val_loss: 0.6932 - val_accuracy: 0.7703\n",
+      "Epoch 5/10\n",
+      "255/255 [==============================] - 243s 952ms/step - loss: 0.4921 - accuracy: 0.8298 - val_loss: 0.6794 - val_accuracy: 0.7644\n",
+      "Epoch 6/10\n",
+      "255/255 [==============================] - ETA: 0s - loss: 0.4683 - accuracy: 0.8358"
      ]
     }
    ],
@@ -385,13 +390,32 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "The neural net offers a mixed improvement over the manual feature extraction.  Both have roughly the same F1 scores, but the neural net is successfully able to classify images by more specific type.  The classification has more meaning as a result.  \n",
+    "\n",
+    "When using **manual feature extraction** with a **decision tree**, the overall **F1 score** was **87%**.  The two smaller classes, lymphocytes and monocytes had an F1 average of 48%.\n",
+    "\n",
+    "When using the **pretrained convolutional layer** with a **neural net**, the overall **F1 score** is **78%**.  The two smaller classes, lymphocytes and monocytes have an F1 average of 60%.\n",
+    "\n",
+    "#### **Classification Report**: Pretrained Convolution Layer + Neural Net  \n",
+    "<img src=\"Presentation/images/classification_report_cnn.png\">  \n",
+    "\n",
+    "#### **Confusion Matrix**: Pretrained Convolution Layer + Neural Net   \n",
+    "<img src=\"Presentation/images/confusion_matrix_CNN.png\" width = 600px>"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "#### Next Steps"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
-   "source": []
+   "source": [
+    "There are additional pretrained convolution nets, such as Resnet50, which may offer improvements over the one used in this network.  For an equal comparison between the two classifiers, the decision tree and neural net, the decision tree classification should be used to classify images by types."
+   ]
   }
  ],
  "metadata": {
