finished notebook and README

--- a/Notebook.ipynb
+++ b/Notebook.ipynb
@@ -284,7 +284,11 @@
       "Epoch 5/10\n",
       "255/255 [==============================] - 243s 952ms/step - loss: 0.4921 - accuracy: 0.8298 - val_loss: 0.6794 - val_accuracy: 0.7644\n",
       "Epoch 6/10\n",
-      "255/255 [==============================] - ETA: 0s - loss: 0.4683 - accuracy: 0.8358"
+      "255/255 [==============================] - 259s 1s/step - loss: 0.4683 - accuracy: 0.8358 - val_loss: 0.6508 - val_accuracy: 0.7767\n",
+      "Epoch 7/10\n",
+      "255/255 [==============================] - 274s 1s/step - loss: 0.4339 - accuracy: 0.8465 - val_loss: 0.6331 - val_accuracy: 0.7791\n",
+      "Epoch 8/10\n",
+      "164/255 [==================>...........] - ETA: 1:19 - loss: 0.4239 - accuracy: 0.8523"
      ]
     }
    ],
@@ -416,6 +420,21 @@
    "source": [
     "There are additional pretrained convolution nets, such as Resnet50, which may offer improvements over the one used in this network.  For an equal comparison between the two classifiers, the decision tree and neural net, the decision tree classification should be used to classify images by types."
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Reference\n",
+    "\"White Blood Cell Data Set,\" Kaggle: https://www.kaggle.com/datasets/masoudnickparvar/white-blood-cells-dataset/  \n",
+    "ImageDataGenerator Technique, \"ResNet50 White Blood Cells Classification\" https://www.kaggle.com/code/arifrizqy/resnet50-white-blood-cells-classification\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": []
   }
  ],
  "metadata": {
